Save/Update files [ci skip]

--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -63,7 +63,7 @@
  SHIP_DEPLOYEDIN_COMBAT:0 "§YDeployment of $NAME$§!\nThere are $ENGAGED|Y$ $NAME$ currently fighting, with $RESERVE|Y$ in reserve, with $DISENGAGED|Y$ already disengaged."
  MORALE_TO_DISENGAGE:0 "規律が$VAL|2Y$以下になると、この艦隊の船は§G$CHANCE$%§!の確率で離脱します。規律が§R0§!になってしまった船は戦うことはできず、もはや離脱を試みるのみです。"
  MACRO_LAND_UNITS_TAB:0 "連隊の募集"
- MACRO_LAND_TEMPLATES_TAB:0 "軍のテンプレートを定義する"
+ MACRO_LAND_TEMPLATES_TAB:0 "軍のテンプレートを定義"
  MACRO_RECRUIT_MERC_TAB:0 "傭兵を雇用"
  DISINHERIT_NOT_THIS:0 "歴史的な理由から$NAME$は廃嫡できません。"
  MODIFIER_AVAILABLE_PROVINCE_LOOT:0 "利用可能な戦利品"
@@ -127,7 +127,7 @@
  MODIFIER_MERCANTILISM_COST:0 "Cost to Promote Mercantilism"
  TRENT_IS_FINISHED:0 "トリエント公会議は終了した"
  TRENT_IS_NOT_FINISHED:0 "Still Concessions Possible"
- ALLOW_SETTLEMENT_GROWTH_TITLE:0 "Allow Settlement Growth"
+ ALLOW_SETTLEMENT_GROWTH_TITLE:0 "移民成長を許可する"
  ALLOW_SETTLEMENT_GROWTH_DESC:0 "従属国に再び移民成長を行わせます。"
  ALLOW_SETTLEMENT_GROWTH_NOT_AI:0 "プレイヤーがこれを行うことを制限することはできません。"
  ALLOW_SETTLEMENT_GROWTH_ALREADY:0 "すでに彼らにこれを許可しています。"
@@ -283,9 +283,9 @@
  HEGEMON_CURRENTLY_AT:0 "With a current power of $VAL|2%Y$, $WHO$ gains the following effects:\n"
  HEGEMON_POWER_MONTHL:1 "Each month, the power changes by $VAL|2+=%$"
  HEGEMON_NO_LONGER_ELIGIBLE:0 " as $NAME$ is longer eligible for it, due to:\n$WHY$"
- HEGEMON_BASE_MODIFIER:0 "Always get the following benefits:\n"
- HEGEMON_SCALES_MODIFIER:0 "Over time, as power grows, gains:\n"
- HEGEMON_MAX_MODIFIER:0 "At Maximum power gains:\n"
+ HEGEMON_BASE_MODIFIER:0 "常に以下の効果を得ます：\n"
+ HEGEMON_SCALES_MODIFIER:0 "時間経過による成長で以下の効果を得ます：\n"
+ HEGEMON_MAX_MODIFIER:0 "最大値で以下の効果を得ます：\n"
  PROCLAIM_HEGEMONY_TITLE:0 "$HEGEMONY$を宣言"
  PROCLAIM_HEGEMONY_DESC:0 "Proclaiming a hegemomy will give us plenty of benefits, increasing our power projection, but will also make us stand more alone in the world!"
  HAVE_HEGEMONY_PROGRESS_LESS_THAN:0 "Hegemony Power is less than $VAL|Y%$"
@@ -656,10 +656,10 @@
  estate_privileges_and_agendas_events.3.name:0 "議会の議題"
  estate_privileges_and_agendas_events.3.desc:1 "The Estates of [Root.GetName] have proposed agendas for the summoned Diet. Favoring one of the Estates here could have large benefits in the long term.\n\n[Root.GetCachedAgendasFlavorText]"
  estate_privileges_and_agendas_events.3.a:1 "[Root.GetBrahminsName]の提案"
- estate_privileges_and_agendas_events.3.b:1 "[Root.GetClergyName]の提案"
+ estate_privileges_and_agendas_events.3.b:1 "[Root.Get聖職者Name]の提案"
  estate_privileges_and_agendas_events.3.c:1 "[Root.GetMarathasName]の提案"
- estate_privileges_and_agendas_events.3.d:1 "[Root.GetNobilityName]の提案"
- estate_privileges_and_agendas_events.3.e:1 "[Root.GetBurghersName]の提案"
+ estate_privileges_and_agendas_events.3.d:1 "[Root.Get貴族Name]の提案"
+ estate_privileges_and_agendas_events.3.e:1 "[Root.Get市民Name]の提案"
  estate_privileges_and_agendas_events.3.f:1 "[Root.GetVaishyasName]の提案"
  estate_privileges_and_agendas_events.3.g:1 "[Root.GetCossacksName]の提案"
  estate_privileges_and_agendas_events.3.h:1 "[Root.GetTribesName]の提案"
@@ -868,7 +868,7 @@
  ESTATE_PRIVILEGE_ON_REVOKED_SHORT:0 "$EFFECT$\n"
  ESTATE_PRIVILEGE_ON_GRANTED_SHORT:0 "$EFFECT$\n"
  PRIVILEGE_EFFECT_SHORT:0 "§Y効果：§!\n"
- YEARLY_PRODUCTION_INCOME_FROM_PROVINCES_CUSTOM:0 "Gain $FACTOR|+$¤ $DESC$\n"
+ YEARLY_PRODUCTION_INCOME_FROM_PROVINCES_CUSTOM:0 "$DESC$$FACTOR|+$¤を獲得\n"
  MONOPOLY_INCOME_CLOTH_DESC:0 "布または絹生産から"
  MONOPOLY_INCOME_DYE_DESC:0 "織物生産から"
  MONOPOLY_INCOME_GLASS_DESC:0 "ガラス生産から"
@@ -935,11 +935,11 @@
  RAISEWARTAXESSTOPPED_2:0 "Because of our lack of enough Military Power we have had to stop collecting the raised war taxes for our wars."
  RAISEWARTAXESSTOPPED_LOG:0 "Because of our lack of enough Military Power we have had to stop collecting the raised war taxes for our wars."
  RAISEWARTAXESSTOPPED_BTN1:0 "OK"
- estate_church_ownership:0 "[Country.GetClergyName]階級の土地所有権"
+ estate_church_ownership:0 "[Country.Get聖職者Name]階級の土地所有権"
  estate_brahmins_ownership:0 "[Country.GetBrahminsName]階級の土地所有権"
  estate_maratha_ownership:0 "[Country.GetMarathasName]階級の土地所有権"
- estate_nobles_ownership:0 "[Country.GetNobilityName]階級の土地所有権"
- estate_burghers_ownership:0 "[Country.GetBurghersName]階級の土地所有権"
+ estate_nobles_ownership:0 "[Country.Get貴族Name]階級の土地所有権"
+ estate_burghers_ownership:0 "[Country.Get市民Name]階級の土地所有権"
  estate_vaisyas_ownership:0 "[Country.GetVaishyasName]階級の土地所有権"
  estate_cossacks_ownership:0 "[Country.GetCossacksName]階級の土地所有権"
  estate_nomadic_tribes_ownership:0 "[Country.GetTribesName]階級の土地所有権"
@@ -997,14 +997,14 @@
  mechanic_blocked_call_diet_yes:0 "国会を解散する"
  mechanic_blocked_call_diet:0 "Disabled Diet"
  PICK_HOTKEY_BUTTON_HINT:0 "任意のボタンをクリックしてショートカットを変更します。"
- ASSIGN_HOTKEY_TITLE:0 "キーボードショートカットの割り当て"
+ ASSIGN_HOTKEY_TITLE:0 "ショートカットキーの割り当て"
  HOTKEY_DESC:0 "キーを押してボタンに割り当てます。(現在のショートカット：$CURRENT|Y$)"
  HOTKEY:0 "ショートカット："
  HOTKEY_WAITING:0 "キー入力を待っています..."
  HOTKEY_ALREADY_ASSIGNED:0 "§R$KEY|Y$はすでに使用されています！"
  HOTKEY_NOT_ASSIGNABLE:0 "§R$KEY|Y$はショートカットとして使用できません"
  KEYCODE:0 "Keycode $CODE$"
- RESET_SHORTCUTS:0 "キーボードショートカットのリセット"
+ RESET_SHORTCUTS:0 "ショートカットキーのリセット"
  RESET_SHORTCUTS_TOOLTIP:0 "カスタマイズされたショートカットをデフォルトにリセットします。"
  CONFIRM_RESET_SHORTCUTS:0 "カスタマイズされたショートカットをすべてデフォルト値にリセットしますか？（再起動が必要）"
  REVOLUTIONARY:0 "革命派"
