Save/Update files [ci skip]

--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -833,9 +833,9 @@
  black_army_reform_desc:0 "Regardless of aristocratic objections, the Black Army is undeniably an effective military force. We shall institutionalize their company and ensure that there is always a reserve of veteran soldiers waiting to join their ranks.\n\nEnables the Black Army and Black Army Reserves mercenary companies.\nThe Black Army will never be disbanded.\nThe Black Army will never mutiny."
  flavor_hun.18.b:0 "Nonsense! Reform and institutionalize the Black Army."
  curia.1.t:0 "教皇庁の会計における誤り"
- curia.1.d:0 "The distinction between the treasury of the Papal State and the treasury of the Catholic Church is subtle but for from merely semantic. We have discovered that a large amount of money has mysteriously disappeared from the Curia Treasury, while a suspiciously similar sum has appeared in the accounts of the Papal State. The paper trail suggests a shocking degree of institutional corruption that may even involve the Pope himself."
- curia.1.a:0 "It's just resting in our account."
- curia.1.b:0 "See that the money is returned to its proper place."
+ curia.1.d:0 "教皇領の国庫とカトリック教会の資金の違いは、単に意味的なものを別にすれば微妙なものだ。我々は大量の金が不思議にも教皇庁の国庫から姿を消したことに気づいたが、一方で教皇領の勘定には疑わしいほどに酷似した金額が現れている。紙面の手がかりは教皇自身さえ関与したかもしれない衝撃的な程度の制度的腐敗を示唆している。"
+ curia.1.a:0 "単に我々の勘定で休んでいるだけだよ。"
+ curia.1.b:0 "金が適切な場所に戻っていることを確認しろ。"
  curia.2.t:0 "教皇の銀行家"
  curia.2.d:0 "[papal_banker_country.GetAdjective]の銀行は最近、手数料を引き上げ、カトリック教会が負っている長期の借金の返済を要求し始めた。彼らは教皇庁は大切な顧客ではあるが、無償でサービスを提供することはできないと強調している。"
  curia.2.a:0 "これは取引を行うためのコストだ。"
@@ -864,11 +864,11 @@
  curia.8.t:0 "Curia Treasury Ransacked"
  curia.8.d:0 "We resolved to protect the city of [Root.Capital.GetCapitalName] at all costs, not only for the sake of our lives but also to protect the portion of the Curia treasury secured within our banks. With the fall of the city, the banks have been looted and the gold has been lost."
  curia.8.a:0 "We have failed our Holy Father."
- curia.9.t:0 "A Generous Tither"
- curia.9.d:0 "As a wealthy Catholic nation, our contributions to the Papal tithe are much appreciated by the Curia. But no matter how generous our contribution the Church continues to solicit even greater tithing.\n\n[Root.noble_name.GetName], of the wealthiest nobles of the court, implores the [Root.Monarch.GetTitle] to resist further tithes, arguing that it drains the wealth from [Root.GetName] as well as more directly from the pockets of the nobility."
- curia.9.a:0 "This donation will surely save our souls."
- curia.9.b:0 "Perhaps [Root.noble_name.GetName] should make a personal contribute."
- curia.9.c:0 "This has gone far enough."
+ curia.9.t:0 "惜しみない十分の一税"
+ curia.9.d:0 "裕福なカトリック国家として、教皇の十分の一税による我々の貢献は、教皇庁から高く評価されている。しかし、我々がどれほど寛大な貢献をしても、教会はさらに大きな十分の一税を求め続けている。\n\n宮廷における最も裕福な貴族である[Root.noble_name.GetName]は、さらなる十分の一税には抵抗するよう[Root.Monarch.GetTitle]に願い出ており、それが[Root.GetName]からはもちろん、貴族のポケットからより直接流れ出していると主張している。"
+ curia.9.a:0 "この寄付は確実に我々の魂を救う。"
+ curia.9.b:0 "おそらく[Root.noble_name.GetName]が個人的に寄付をするはずだ。"
+ curia.9.c:0 "これはやりすぎだ。"
  curia.10.t:0 "十分の一税の抑制"
  curia.10.d:0 "[Root.GetName]は厳しい経済状況に直面している。我々の顧問は、経済破綻を防ぐために資金を調達する新しい方法を必死に探し求めている。特に魅力的な提案の1つは、教会からの十分の一税を抑制し、増税を通じて国庫に金を吸い上げることである。これはきっと聖職者の怒りを招くだろうが、この困難な時代に我々はあらゆる選択肢を考慮しなければならない。"
  curia.10.a:0 "神が金を何のために必要とするのだ？"
@@ -929,7 +929,7 @@
  shadow_kingdom.2.a:0 "イタリアを放棄する時だ。"
  shadow_kingdom.2.b:0 "イタリアを統制しなければならない。"
  shadow_kingdom_emperor_gives_up_tt:0 "§Y帝国内の統制されているイタリア国家は帝国に留まるでしょう。§!\n§Y統制されていないイタリア国家は帝国を去るでしょう。§!"
- shadow_kingdom_incident_tt:0 "§YThe Emperor has until the year 1490 to rein in as many Italian nations in the Empire as possible.§!"
+ shadow_kingdom_incident_tt:0 "§Y皇帝は1490年までに、帝国のできるだけ多くのイタリア国家を統制しなければなりません。§!"
  shadow_kingdom.3.t:0 "影の王国"
  shadow_kingdom.3.d:0 "イタリアの統制に関する帝国の決意にもかかわらず、帝国の覇権を受け入れることを拒否するイタリア国家は未だ存在する。しかしながら[Root.GetAdjective]の努力が完全に無駄であったわけではなく、統制されたこれらの国家は、帝国に再び挑戦することはしない。"
  shadow_kingdom.3.a:0 "イタリアの運命は決まっている。"
@@ -1018,13 +1018,13 @@
  support_french_league_tt:0 "我々は、その行動が国家のニーズと一致しない可能性のある狂信者の集団を支持します。"
  do_not_support_french_league_tt:0 "我々は政府に反対する狂信者の集団の怒りを買うでしょう。"
  flavor_tus.20.t:0 "パッツィ家の陰謀"
- flavor_tus.20.d:0 "The Pazzi banking family, bitter rivals of the [Root.Monarch.Dynasty.GetName] family and the [Root.Monarch.GetTitle], have conspired to overthrow the Signoria and install themselves as rulers of [Root.GetName]. Many of the most powerful figures in [Root.GetAdjective] politics are participants in this vile plot, ranging from merchants to clergymen to nobles.\n\nThe Pazzi plan to assassinate [Root.Monarch.GetName] during High Mass at the Duomo, and then to capture the Palazzo della Signoria and seize the reins of government. Should the conspiracy fail however, most of the political enemies of the Signora would be branded as criminals and the [Root.Monarch.Dynasty.GetName] would therefore rule practically unopposed."
+ flavor_tus.20.d:0 "[Root.Monarch.Dynasty.GetName]一族と[Root.Monarch.GetTitle]の激しいライバルであるパッツィ家の銀行家一族は、シニョリーア制を打倒し、[Root.GetName]の支配者として彼ら自身をその地位に就けることを企てている。[Root.GetAdjective]政治における最も強力な人物の多くは、商人から聖職者、貴族に至るまで、この卑劣な陰謀に加わっている。\n\nパッツィ家は、ドゥオーモでの大ミサの間に[Root.Monarch.GetName]を暗殺し、その後、シニョリーア宮殿を占領し、政府の支配を奪う計画である。ただし、陰謀が失敗すれば、シニョリーアの政敵のほとんどは罪人の烙印を押され、[Root.Monarch.Dynasty.GetName]は事実上反対者がいない状態で支配を行うだろう。"
  flavor_tus.20.a:0 "奴等を宮殿から吊るせ！"
- flavor_tus.20.b:0 "Support the Pazzi coup."
+ flavor_tus.20.b:0 "パッツィ家の政変を支援する。"
  strengthened_signoria_tt:0 "§Y次に統治者を再選するとき、または統治者の家族から候補者を選出するとき、共和的伝統は消費しません。§!"
  strengthened_signoria_election_tt:0 "§Yこのオプションはシニョリーア制の強化により、共和的伝統を消費しません。§!"
  signoria_leader_dies_tt:0 "§Y[Root.Monarch.GetName]§!は殺されます！"
- pol_disaster_concede_tt:0 "§YThis will put us on the path to conceding complete control to the Sejm, abolishing the monarchy.§!"
+ pol_disaster_concede_tt:0 "§Y これは君主制を廃止することで、我々をセイムによる完全な支配を認める道へと動かします。§!"
  flavor_pol.21.t:0 "セイムが支配を握る"
  flavor_pol.21.d:0 "セイムで数え切れないほどの妥協のように感じたものに同意した[Root.Monarch.GetName]は、これ以上は我慢できないとして、[Root.Monarch.GetHerHis]の退位を発表した。[Root.GetAdjective]の君主制の悲惨な国家を継承しようとする王位候補者がいないために、今や完全な権力がセイムに存在している。[Root.GetName]は選挙君主制により共和国と呼ばれることもあるが、今日からは真に[Root.GetName]の最も静穏なる共和国が存在することになるだろう。"
  flavor_pol.21.a:0 "セイム万歳！共和国万歳！"
@@ -1126,11 +1126,11 @@
  bru_residenzstadt_wolfenbuttel:0 "ヴォルフェンビュッテル宮廷都市"
  bru_residenzstadt_wolfenbuttel_desc:0 "我々は最近、公爵の邸宅を強力な要塞と素晴らしい宮殿の街であるヴォルフェンビュッテルに移した。我々の後援の下で、それは我々の王朝の栄光と慈悲の記念碑になるだろう。"
  bru_herzog_august_bibliothek:0 "ヘルツォーク・アウグスト図書館"
- bru_herzog_august_bibliothek_desc:0 "We shall display our forward-thinking virtues by establishing a magnificent library - the largest north of the Alps - that will draw manuscripts and scholars from across Europe to our court."
+ bru_herzog_august_bibliothek_desc:0 "ヨーロッパ中の写本や学者が宮廷に呼び寄せるような素晴らしい図書館ーアルプス山脈以北で最大の図書館ーを設立することで、先見の明を見せつけるつもりだ。"
  bru_trade_guilds:0 "ブラウンシュヴァイク商工会"
- bru_trade_guilds_desc:0 "Although nominally part of the Duchy, the cities of Brunswick and Göttingen were for a long time semi-independent and ruled by a powerful class of burghers and patricians. Now that we have reasserted our authority over them, we can use the expertise they have built up over the years to increase our production."
+ bru_trade_guilds_desc:0 "名目上は公国の一部であったが、都市ブラウンシュヴァイクとゲッティンゲンは長い間半独立状態であり、強力な市民階級と貴族階級によって統治されていた。現在では、彼らに対する支配権を再請求しているので、長年に渡って積み上げてきた技能を生かして、生産を増やすことができる。"
  bru_leibnitz_lessing:0 "ライプニッツとレッシング"
- bru_leibnitz_lessing_desc:0 "Several of Germany's most prominent thinkers have taken up residence in Wolfenbüttel, choosing to publish their philosophical treatises and literary works in our court. As a center of learning in northern Germany, we can rely on the newest ideas quickly making headway in our lands."
+ bru_leibnitz_lessing_desc:0 "ドイツの著名な思想家の中には、ヴォルフェンビュッテルに居を構え、自国の宮廷で哲学論文や文学作品を発表することを選んだ。北ドイツにおける学問の中心地として、領内で急速に進歩する最新の考えに頼ることができる。"
  bru_schwarze_schar:0 "ブラック・ブランズウィッカーズ"
  bru_schwarze_schar_desc:0 "ブランズウィッカーズは、どんなに絶望的な状況であっても、外国の占領に屈することは決してない。すべてが失われたように見えても、我々の精鋭部隊は敵との戦いを続け、彼らの偉業を通じた名声を勝ち取るだろう。"
  LUN_ideas:0 "リューネブルクのアイデア"
@@ -1139,13 +1139,13 @@
  lun_hansa_contacts:0 "ハンザ同盟との交流"
  lun_hansa_contacts_desc:0 "我々の都市は、しばしばハンザ同盟の一部であった。このため、我々の商人たちは、彼らの商品を販売できる強力な人脈網を構築している。"
  lun_staple_rights:0 "保管権"
- lun_staple_rights_desc:0 "Our city not only enjoys staple rights, requiring merchants passing by to put their goods on sale in it - in fact, we have erected earthworks to ensure that they cannot pass us by. All manner of goods can therefore be traded in our markets, which bring considerable wealth to the city."
+ lun_staple_rights_desc:0 "我が都市は、保管権を享受しているだけでなく、自領を通過する商人たちに商品を売るように要求しているー実際、彼らが我々の目の前を通過していくことができないよう、土盛りを作り上げている。従って、あらゆる種類の商品が自国の市場で取引され、都市にかなりの富をもたらしている。"
  lun_adroit_diplomacy:0 "巧みな外交"
- lun_adroit_diplomacy_desc:0 "As a relatively small duchy, we have been forced to develop considerable expertise in the art of diplomacy over the years to secure our survival. This expertise that will stand us in good stead in the future as we seek greater prominence."
+ lun_adroit_diplomacy_desc:0 "比較的小さな公国なので生き残っていくためには、長年にわたって外交術について相当の専門知識を身につけなければならなかった。自国をより大きく羽ばたかせたいので、この専門知識は将来大いに役立つことだろう。"
  lun_dynastic_play:0 "王家の分家"
- lun_dynastic_play_desc:0 "The von Welf dynasty has a multitude of sub-branches, each ruling its own small territory. The chances of us being unable to find an eligible heir from our dynasty are accordingly low."
+ lun_dynastic_play_desc:0 "フォン・ヴェルフ王家には多数の分家が存在し、それぞれが小さな自領支配をしている。従って、王家の後継者を見つけることができない可能性は低い。"
  lun_lionhearted:0 "勇猛なる精神"
- lun_lionhearted_desc:0 "Our fearsome banner inspires our troops to find the courage to do great deeds worthy of one with the heart of a lion."
+ lun_lionhearted_desc:0 "畏怖を感じさせる我が旗は、自軍を鼓舞し、獅子の心で偉業を達成する勇気を見い出させる。"
  ULM_ideas:0 "ウルムのアイデア"
  ULM_ideas_start:0 "ウルムの伝統"
  ULM_ideas_bonus:0 "ウルムの宿願"
